src/app/ControlPanel/Items/ItemTitle.scss
@use "./UnitSummary.scss";
.item-title {
  @include UnitSummary.colors;
  height: 32px;
  margin-bottom: 6px;
  min-width: 120px;

  background-color: var(--bg-color-2);
  padding: 12px;
  cursor: pointer;
  border-radius: 4px;
  display: flex;
  flex-direction: row;
  align-items: center;
  flex-wrap: wrap;
  padding: 0 12px;

  .name {
    margin: 0 8px;
    font-size: medium;
    font-weight: inherit;
  }

  .uses {
    margin-left: auto;
    color: var(--text-color-2);
  }
  
  &.equippable {
    cursor: pointer;
    &:hover {
      font-weight: bold;
    }
  }
}

